antes de despliegue

--- a/package.json
+++ b/package.json
@@ -1,4 +1,23 @@
 {
+  "name": "ironrooms",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hectorbiminchumo/ironrooms.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/hectorbiminchumo/ironrooms/issues"
+  },
+  "homepage": "https://github.com/hectorbiminchumo/ironrooms#readme",
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
