--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "hbs": "^4.2.0",
+    "mongodb": "^4.2.0",
     "mongoose": "^6.0.13"
   }
 }
